# DePINZcash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md
.github/workflows/: ci.yml
config/: config.example.json
docs/: EXPOSED_RPC.md  FAQ.md  REWARDS.md  TECHNICAL_SPEC.md  ZEBRA_SETUP.md  ZK_IMPLEMENTATION.md
proofs/: .gitkeep
prover/: Cargo.toml
prover/src/: config.rs  halo2_circuit.rs  lib.rs  main.rs  proof_gen.rs  proof_gen.rs.old  zebra_reader.rs
prover/tests/: README.md  integration_test.rs  proof_workflow_test.rs  reward_tests.rs  test_helpers.rs
scripts/: generate_proof.sh  setup.sh  test.sh  test_proof_gen.sh
server/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
server/migrations/: 0002_perf_indexes.sql  0003_height_indexes.sql
server/src/: auth.rs  config.rs  merkle.rs  scheduler.rs  state.rs
server/src/api/: admin.rs  health.rs  mod.rs  nodes.rs  proofs.rs  stats.rs
server/src/store/: sqlite.rs
server/tests/: adversarial_proof.rs  adversarial_register.rs  challenges_http.rs  concurrency.rs  e2e_register_and_proof.rs  exposed_rpc.rs  exposed_rpc_live.rs  health_info_cors.rs  rpc_quorum.rs  snapshots.rs  store_conformance.rs
web/: .env.example
web/src/: App.tsx  vite-env.d.ts
web/src/components/: AppFooter.tsx  AppHeader.tsx  VaultWallet.tsx
web/src/lib/: api.ts  config.ts
web/src/pages/: Explorer.tsx  Home.tsx  Register.tsx  RunNode.tsx
